// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> button variations renders button color 1`] = `
<div>
  <button
    class="flex w-12/12 px-10 justify-center items-center rounded text-white leading-xs transition-2 cursor-pointer appearance-none leading-none focus:outline-none h-50 text-base font-bold bg-teal hover:bg-teal-dark focus:bg-teal"
    formnovalidate=""
    type="submit"
  >
    Label
  </button>
</div>
`;

exports[`<Button> button variations renders button font-size 1`] = `
<div>
  <button
    class="flex w-12/12 px-10 justify-center items-center rounded text-white leading-xs transition-2 cursor-pointer appearance-none leading-none focus:outline-none h-50 text-sm font-bold bg-salmon hover:bg-salmon-dark focus:bg-salmon"
    formnovalidate=""
    type="submit"
  >
    Label
  </button>
</div>
`;

exports[`<Button> button variations renders button font-weight 1`] = `
<div>
  <button
    class="flex w-12/12 px-10 justify-center items-center rounded text-white leading-xs transition-2 cursor-pointer appearance-none leading-none focus:outline-none h-50 text-base font-regular bg-salmon hover:bg-salmon-dark focus:bg-salmon"
    formnovalidate=""
    type="submit"
  >
    Label
  </button>
</div>
`;

exports[`<Button> button variations renders button size 1`] = `
<div>
  <button
    class="flex w-12/12 px-10 justify-center items-center rounded text-white leading-xs transition-2 cursor-pointer appearance-none leading-none focus:outline-none h-56 text-base font-bold bg-salmon hover:bg-salmon-dark focus:bg-salmon"
    formnovalidate=""
    type="submit"
  >
    Label
  </button>
</div>
`;

exports[`<Button> button variations renders disabled button 1`] = `
<div>
  <button
    class="flex w-12/12 px-10 justify-center items-center rounded text-white leading-xs transition-2 cursor-pointer appearance-none leading-none focus:outline-none h-50 text-base font-bold bg-salmon hover:bg-salmon-dark focus:bg-salmon cursor-not-allowed bg-grey-3 hover:bg-grey-3"
    disabled=""
    formnovalidate=""
    type="submit"
  >
    Label
  </button>
</div>
`;
